actix-wasm-filter/release/istio/prime.filter.config.yaml
# istio api config: https://github.com/istio/api/blob/master/networking/v1alpha3/envoy_filter.gen.json
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: actix-filter-config
  namespace: istio-system
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: actix-filter-config
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                # envoy api: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#envoy-v3-api-msg-config-core-v3-remotedatasource
                vm_config:
                  vm_id: actix-auth-filter
                  runtime: envoy.wasm.runtime.v8
                  code:
                    remote:
                      # envoy api for http_uri: https://github.com/envoyproxy/envoy/blob/main/api/envoy/api/v2/core/http_uri.proto
                      http_uri:
                        uri: https://github.com/jmgoyesc/istio-extensions/blob/main/actixenvoyfilter.wasm?raw=true
                        timeout: 10s
                        cluster: jwks_cluster
                      # command `sha256sum`
                      sha256: d35ae841ddeb8155b8bfd93b6a09b30801057747341d7cf09245b942a3c5c3cf
